2004-02-12  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Support equal sign for attr=val in distfiles.
	Remove old format for attr=val.

	* man/dist/dist2.1: Updated for changes.

	* tagged gendersllnl-1-3-1
	
2004-02-11  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am: Compile with _REENTRANT.

	* tagged gendersllnl-1-2-1
	
2004-02-10  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Change -v option to -d option.  Added -v, -V, -x
	options.  Add hostrange support to -w and -x options.

	* dist/dist_all: Call dist2 with -v option when -w option is not
	listed.

	* man/dist/dist2.1, man/dist/dist_all.1: Updated for changes.
	
2004-02-09  Mark Grondona <mgrondona@llnl.gov>

	* compat/Hostlist.pm (expand) :  Properly handle multiple quadrics
        style hostlists separated by the comma character.

2003-02-04  Albert Chu  <chu11@llnl.gov>

	* : Fix copyright notices everywhere to say "Gendersllnl" instead of
	"Genders".
	
2003-01-15  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/gendersllnl.c: All hostlist_create or
	hostlist_iterator_create errors are OUTMEM errors rather than
	INTERNAL errors.  Change code style to fit more with GNU standard.
	
2003-01-09  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Fixed corner case when falling through to
	/etc/genders.
	
2003-12-31  Albert Chu  <chu11@llnl.gov>

	* src/libgendersllnl/Makefile.am, src/Gendersllnl/Gendersllnl.pm,
	compat/Hostlist.pm: Began consistent library versioning.
	
2003-12-30  Albert Chu  <chu11@llnl.gov>

	Added copyright header to all files.
	
2003-12-11  Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm: Fixed declarations of EXPORT_OK and
	EXPORT_TAGS.

	* : tagged gendersllnl-1-2-0-pre3
	
2003-11-07  Albert Chu  <chu11@llnl.gov>

	* src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am,
	compat/Makefile.am: Fixed cleanup bug.

2003-11-03  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Replaced --with-xs-prefix, --with-compat-prefix,